--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ TAKE_PROFIT_PERCENT=1.5
 STOP_LOSS_PERCENT=0.8
 TRAILING_STOP_PERCENT=0.5
 AUTO_TRADE=false
+PARTIAL_TP1_PERCENT=0.6
+PARTIAL_TP1_PROFIT=0.8
+PARTIAL_TP2_PERCENT=0.4
+PARTIAL_TP2_PROFIT=1.5
+DAILY_MAX_LOSS_PERCENT=3
 
 # Confirmation & Adaptive RSI
 CONFIRMATION_CANDLES=2
@@ -32,6 +37,10 @@ FUNDING_THRESHOLD=0
 
 COOLDOWN_SECONDS=300
 
+# Modes
+PAPER=false
+BACKTEST=false
+
 # Telegram
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
@@ -42,3 +51,12 @@ CHART_HEIGHT=500
 
 # Logging
 LOG_DIR=logs
+
+# Failover endpoints (optional)
+REST_FAPI=https://fapi.binance.com
+REST_FAPI_BACKUP=https://api1.binance.com
+REST_FAPI_TESTNET=https://testnet.binancefuture.com
+FSTREAM_TESTNET=wss://stream.binancefuture.com
+
+# Daily report waktu (WIB)
+DAILY_REPORT_HOUR=23
