--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "robottrading",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "backtest": "node src/backtest.js",
+    "paper": "PAPER=true node src/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.11.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "form-data": "^4.0.4",
-    "quickchart-js": "^3.1.3",
     "technicalindicators": "^3.1.0",
     "ws": "^8.18.3"
   }
