--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,26 @@
 # --- Binance ---
 BINANCE_API_KEY=
 BINANCE_API_SECRET=
-TESTNET=true
+TESTNET=false
 
 # Symbols & interval
 SYMBOLS=BTCUSDT,ETHUSDT
 INTERVAL=5m
-HISTORY_LIMIT=300
+HISTORY_LIMIT=750
 
 # Trading / Risk
 POSITION_SIZE_PERCENT=20
 LEVERAGE=5
-TAKE_PROFIT_PERCENT=1.5
+TAKE_PROFIT_PERCENT=1.2
 STOP_LOSS_PERCENT=0.8
 TRAILING_STOP_PERCENT=0.5
-AUTO_TRADE=false
-PARTIAL_TP1_PERCENT=0.6
-PARTIAL_TP1_PROFIT=0.8
-PARTIAL_TP2_PERCENT=0.4
-PARTIAL_TP2_PROFIT=1.5
-DAILY_MAX_LOSS_PERCENT=3
+AUTO_TRADE=true
+PARTIAL_TP1_PERCENT=0.5     # lepas 50% di TP1
+PARTIAL_TP1_PROFIT=0.6      # 0.6%
+PARTIAL_TP2_PERCENT=0.5     # sisanya 50% di TP2
+PARTIAL_TP2_PROFIT=1.2
+DAILY_MAX_LOSS_PERCENT=3    # guard harian
+KELLY_FACTOR=0.5            # cap sizing dgn kelly fraksi
 
 # Confirmation & Adaptive RSI
 CONFIRMATION_CANDLES=2
@@ -29,6 +30,12 @@ MAX_RSI_PERIOD=50
 VOL_WINDOW=100
 RSI_THRESHOLD_LOWER=30
 RSI_THRESHOLD_UPPER=70
+
+# Regime/trend filter
+EMA_PERIOD=200               # trend filter
+ATR_PERIOD=14
+ATR_MULT_SL=2.0              # SL berbasis ATR
+ATR_MULT_TRAIL=3.0           # trailing
 
 # Metrics filter thresholds (optional)
 LSR_BUY=1.2
@@ -40,6 +47,10 @@ COOLDOWN_SECONDS=300
 # Modes
 PAPER=false
 BACKTEST=false
+
+# Costs model (backtest/live sanity)
+TAKER_FEE_BPS=5              # 0.05%
+SLIPPAGE_BPS=2               # 0.02%
 
 # Telegram
 TELEGRAM_BOT_TOKEN=
