--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "robottrading",
-  "version": "2.0.0",
-  "description": "",
+  "version": "3.0.0",
+  "description": "Adaptive RSI futures bot with regime filter, ATR trailing, optimizer & walk-forward backtest",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "paper": "PAPER=true node src/index.js",
     "backtest": "node src/backtest.js",
-    "paper": "PAPER=true node src/index.js"
+    "optimize": "node src/optimizer.js",
+    "walkforward": "node src/walkforward.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "afandi404",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.11.0",
